--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>QR Generator</title>
+    <!-- Tab icon -->
+    <link rel="shortcut icon" href="images/icon2.png" />
 
      <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -21,10 +23,6 @@
 </head>
 <body>
 
-    <!-- <h1> QR Code Generator</h1> -->
-
-
-    
 
     <div class="container" style="margin-top: 60px;">
         <div class="row justify-content-center">
