--- a/index.html
+++ b/index.html
@@ -60,6 +60,18 @@
             </div>
 
         </div>
+        <div class="row justify-content-center" style="margin-top: 40px; margin-top: 10px;">
+
+            <div class="col-md text-center">
+                <span class="my-portfolio ">Made with ❤ by <a href="https://linktr.ee/randiltennakoon" target="_blank">Randil Tennakoon</a> </span>
+                <br />
+                | <strong class="text-success"> &emsp; STAY HOME &ensp; STAY SAFE &emsp;</strong> |
+            </div>
+            <!-- <div class="col-md text-center">
+                | <strong> &emsp; STAY HOME &ensp; STAY SAFE &emsp;</strong> |
+            </div> -->
+
+        </div>
     </div>
 
 
