--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="card border-dark justify-content-center" style="width: 25rem; margin: 10px;">
 
-                <h3 class="card-header text-white bg-dark">
+                <h3 class="card-header text-white bg-dark text-center">
                     QR Code Generator
                 </h3>
 
@@ -54,7 +54,7 @@
                             <small class="form-helper text-muted">URL to Portfolio/YouTube, etc</small>
                         </div>
             
-                        <button class="btn btn-primary" onclick="generateURL(document.getElementById('user_input_width').value, document.getElementById('user_input_height').value, document.getElementById('user_input_data').value)">
+                        <button class="btn btn-outline-primary btn-lg" onclick="generateURL(document.getElementById('user_input_width').value, document.getElementById('user_input_height').value, document.getElementById('user_input_data').value)">
                             Generate
                         </button>
                     </form>
